--- a/index.html
+++ b/index.html
@@ -1,4 +1,9 @@
 <!DOCTYPE html>
+<!--
+  Demonstration how to make a nice animation of a rising/setting moon/sun
+
+  Thanks to https://stackoverflow.com/questions/16664244/draw-a-crescent-moon-using-svg-in-html for his crescent moon
+-->
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -7,13 +12,106 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
-<div id="sunrise">
-    <img src=""  id="heavenlybody">
-    <img src="./skyline.png" id="skyline">
+<div class="globalContainer">
+    <div id="sunrise">
+        <div id="starsContainer">
+            <svg version="1.1"
+                 xmlns="http://www.w3.org/2000/svg"
+                 viewBox="0 0 400 200"
+                 width="400" height="200"
+                 style="fill: transparent"
+            >
+                <g id="stars">
+                </g>
+            </svg>
+        </div>
+
+        <div id="imageContainer">
+            <svg version="1.1"
+                 xmlns="http://www.w3.org/2000/svg"
+                 viewBox="-10 -10 100 100"
+                 width="50" height="50" id="heavenlybodyMoon">
+                <path d="M50 20 A40 40 0 1 0 50 70 30 30 0 1 1 50 20z"
+                      fill="gold"
+                      transform="rotate(-30)"
+                />
+            </svg>
+            <!-- https://upload.wikimedia.org/wikipedia/commons/c/c2/Emoji_u2600.svg -->
+            <svg id="heavenlybodySun"
+                 width="50"
+                 height="50"
+                 viewBox="0 0 128 128"
+                 xmlns="http://www.w3.org/2000/svg"
+                 xmlns:xlink="http://www.w3.org/1999/xlink">
+                <g>
+                    <path d="M64,30.34c-18.59,0-33.66,15.07-33.66,33.65c0,18.59,15.07,33.66,33.66,33.66 c18.59,0,33.66-15.07,33.66-33.66C97.66,45.41,82.59,30.34,64,30.34z"
+                          style="fill:#FCC21B;"/>
+                    <path d="M56.76,24.21L56.76,24.21h14.49c0.67,0,1.29-0.33,1.68-0.88c0.38-0.54,0.47-1.25,0.24-1.88 L65.92,1.83c-0.3-0.81-1.06-1.34-1.92-1.34s-1.62,0.54-1.92,1.34l-7.25,19.63c-0.23,0.63-0.14,1.33,0.24,1.88 C55.46,23.89,56.09,24.21,56.76,24.21z"
+                          style="fill:#FCC21B;"/>
+                    <path d="M97.26,40.99c0.38,0.39,0.91,0.6,1.44,0.6c0.12,0,0.24-0.01,0.36-0.03c0.66-0.12,1.21-0.55,1.5-1.16 l8.76-19.01c0.36-0.78,0.19-1.69-0.41-2.3c-0.61-0.61-1.53-0.77-2.31-0.42L87.6,27.44c-0.61,0.28-1.04,0.84-1.16,1.5 c-0.12,0.66,0.1,1.33,0.56,1.81L97.26,40.99z"
+                          style="fill:#FCC21B;"/>
+                    <path d="M126.18,62.08l-19.64-7.24c-0.63-0.23-1.33-0.14-1.88,0.24c-0.55,0.38-0.87,1-0.87,1.67l0.01,14.49 c0,0.67,0.33,1.3,0.88,1.68c0.35,0.23,0.76,0.36,1.17,0.36c0.24,0,0.48-0.04,0.71-0.13l19.64-7.24c0.8-0.29,1.34-1.06,1.34-1.93 C127.52,63.14,126.99,62.38,126.18,62.08z"
+                          style="fill:#FCC21B;"/>
+                    <path d="M100.56,87.6c-0.28-0.61-0.84-1.04-1.5-1.16c-0.66-0.11-1.34,0.1-1.8,0.57L87.01,97.26 c-0.47,0.47-0.69,1.15-0.57,1.81c0.12,0.65,0.55,1.22,1.16,1.5l19.01,8.76c0.27,0.13,0.56,0.18,0.86,0.18 c0.53,0,1.05-0.21,1.44-0.6c0.61-0.61,0.77-1.52,0.41-2.3L100.56,87.6z"
+                          style="fill:#FCC21B;"/>
+                    <path d="M71.24,103.78L71.24,103.78l-14.49,0.01c-0.67,0-1.29,0.33-1.67,0.88 c-0.38,0.55-0.47,1.25-0.25,1.87l7.25,19.64c0.3,0.8,1.06,1.34,1.92,1.34s1.62-0.54,1.92-1.34l7.25-19.64 c0.23-0.63,0.14-1.33-0.24-1.88C72.54,104.11,71.92,103.78,71.24,103.78z"
+                          style="fill:#FCC21B;"/>
+                    <path d="M30.74,87.01c-0.47-0.47-1.14-0.68-1.8-0.57c-0.66,0.12-1.22,0.55-1.5,1.16l-8.76,19.01 c-0.36,0.78-0.19,1.7,0.42,2.3c0.39,0.39,0.91,0.6,1.44,0.6c0.29,0,0.58-0.06,0.86-0.19l19.01-8.77c0.61-0.28,1.04-0.84,1.16-1.5 c0.12-0.66-0.1-1.33-0.57-1.8L30.74,87.01z"
+                          style="fill:#FCC21B;"/>
+                    <path d="M22.17,73.29c0.41,0,0.82-0.13,1.17-0.37c0.55-0.38,0.88-1.01,0.88-1.68l-0.01-14.49 c0-0.67-0.33-1.29-0.88-1.68c-0.55-0.38-1.25-0.47-1.87-0.24L1.82,62.08c-0.8,0.29-1.34,1.06-1.34,1.92c0,0.85,0.53,1.62,1.34,1.92 l19.65,7.24C21.7,73.25,21.93,73.29,22.17,73.29z"
+                          style="fill:#FCC21B;"/>
+                    <path d="M27.45,40.4c0.28,0.61,0.84,1.04,1.5,1.16c0.12,0.02,0.24,0.03,0.36,0.03c0.54,0,1.06-0.21,1.45-0.6 L41,30.74c0.47-0.48,0.68-1.15,0.56-1.81c-0.12-0.65-0.55-1.21-1.16-1.49l-19.02-8.76c-0.78-0.36-1.69-0.19-2.3,0.42 c-0.61,0.61-0.77,1.52-0.41,2.3L27.45,40.4z"
+                          style="fill:#FCC21B;"/>
+                </g>
+            </svg>
+        </div>
+
+        <div id="backgroundContainer">
+            <svg version="1.1"
+                 xmlns="http://www.w3.org/2000/svg"
+                 viewBox="20 0 100 80"
+                 width="400" height="200"
+            >
+                <path fill="transparent" id="windows"
+                      d="m 0.45337068,50.749253 0.176366,14.62074 H 142.29967 v -33.42213 h -10.72501 v -9.72734 h -17.70874 v 5.98605 h -4.98838 V 7.0059735 H 92.665308 v 7.2331395 h -8.48024 v 8.48025 h -6.73431 V 0.77049348 H 47.520491 V 24.465293 l -1.753687,0.4699 V 10.996673 H 32.555356 v 16.96048 h -1.745932 v -5.98605 H 8.8605617 l 0.08818,28.77815 z"/>
+                <path fill="grey"
+                      d="m 0.45337068,50.749253 0.176366,14.62074 H 142.29967 v -33.42213 h -10.72501 v -9.72734 h -17.70874 v 5.98605 h -4.98838 V 7.0059735 H 92.665308 v 7.2331395 h -8.48024 v 8.48025 h -6.73431 V 0.77049348 H 47.520491 V 24.465293 l -1.753687,0.4699 V 10.996673 H 32.555356 v 16.96048 h -1.745932 v -5.98605 H 8.8605617 l 0.08818,28.77815 z
+                 M 34.532719,12.55169 h 3.420903 v 3.99697 h -3.420903 z
+                 M 34.532719,18.136133 h 3.420903 v 3.99697 h -3.420903 z
+                 M 40.599461,12.55169 h 3.420903 v 3.99697 h -3.420903 z
+                 M 12.642477,24.964121 h 3.420904 v 3.996969 h -3.420904 z
+                 M 18.483435,24.964121 h 3.420903 v 3.996969 h -3.420903 z
+                 M 25.097151,31.701746 h 3.420903 v 3.996969 h -3.420903 z
+                 M 29.814932,31.701746 h 3.420904 v 3.996969 h -3.420904 z
+                 M 25.097151,36.757027 h 3.420903 v 3.996969 h -3.420903 z
+                 M 51.37566,3.9097683 h 3.420904 V 7.9067378 H 51.37566 Z
+                 M 51.37566,9.4942102 h 3.420904 V 13.49118 H 51.37566 Z
+                 M 51.37566,14.549493 h 3.420904 v 3.996969 H 51.37566 Z
+                 M 57.971569,9.4942102 h 3.420904 V 13.49118 h -3.420904 z
+                 M 54.902966,27.175623 h 3.420903 v 3.996969 h -3.420903 z
+                 M 61.498867,27.175623 h 3.420904 v 3.996969 h -3.420904 z
+                 M 54.902966,32.760063 h 3.420903 v 3.99697 h -3.420903 z
+                 M 69.805878,41.652046 h 3.420903 v 3.99697 h -3.420903 z
+                 M 74.814293,41.652046 h 3.420904 v 3.99697 h -3.420904 z
+                 M 69.805878,46.707329 h 3.420903 v 3.996969 h -3.420903 z
+                 M 57.971569,3.9097683 h 3.420904 v 3.9969695 h -3.420904 z
+                 M 64.03833,3.9097683 h 3.420904 V 7.9067378 H 64.03833 Z
+                 M 94.849823,9.2889185 h 3.420904 v 3.9969695 h -3.420904 z
+                 M 99.8582,9.2889185 h 3.4209 v 3.9969695 h -3.4209 z
+                 M 94.849823,14.344201 h 3.420904 v 3.99697 h -3.420904 z
+                 M 103.97675,36.228798 h 3.42091 v 3.996969 h -3.42091 z
+                 M 108.45596,36.228798 h 3.42091 v 3.996969 h -3.42091 z
+                 M 103.97675,40.754921 h 3.42091 v 3.996969 h -3.42091 z
+                 M 116.36646,23.905802 h 3.42091 v 3.996969 h -3.42091 z
+                 M 120.84567,23.905802 h 3.42091 v 3.996969 h -3.42091 z
+                 M 116.36646,28.961084 h 3.42091 v 3.99697 h -3.42091 z
+        "/>
+            </svg>
+        </div>
+    </div>
 </div>
 <div id="info">
     <p id="dateTime"></p>
-    <p id="ticker"></p>
 </div>
 
 </body>
