Updated readme - moved info to readme from HTML

--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <!--
   Demonstration how to make a nice animation of a rising/setting moon/sun
-
-  Thanks to https://stackoverflow.com/questions/16664244/draw-a-crescent-moon-using-svg-in-html for his crescent moon
+  see https://github.com/martinmolema/SunriseSunset and  https://codepen.io/martinmolema/pen/zYzwYgP
+  for complete source and demonstration
 -->
 <html lang="en">
 <head>
